# apriltags_sdf_generator

./: CMakeLists.txt  april_sdf_generator.cpp  chessboard_sdf_generator.cpp
libraries/: xml_gen.cpp  xml_gen.hpp
root/: CMakeLists.txt  april_sdf_generator.cpp
root/libraries/: xml_gen.cpp  xml_gen.hpp
root/test/: CMakeLists.txt  XmlGen_test.cpp
root/test/resource/apriltag_1/: model.config  model.sdf
root/test/resource/apriltag_2/: model.config  model.sdf
